welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: value Color
while (!getColorSol():Color.green)
                      ^Balin:2: error: not found: value getColorSol
while (!getColorSol():Color.green)
        ^